# churl

./: .gitattributes  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  install.ps1  install.sh  release-plz.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.serena/: project.yml
crates/churl/: Cargo.toml
crates/churl-core/: Cargo.toml  README.md
crates/churl-core/src/: assert.rs  auth.rs  config.rs  cookies.rs  debug.rs  export.rs  history.rs  http.rs  import.rs  interchange.rs  lib.rs  load.rs  model.rs  persistence.rs  pin.rs  secrets.rs  sequence.rs  template.rs
crates/churl-core/src/history/: cookie_writer.rs  mod.rs  reads.rs  schema.rs  writes.rs
crates/churl-core/src/import/: auth.rs  flags.rs  mod.rs
crates/churl-core/src/interchange/: tests.rs
crates/churl-core/src/persistence/: atomic.rs  endpoints.rs  merge.rs  mod.rs  naming.rs  refs.rs  relocate.rs  reorder.rs  sequences.rs  workspace.rs
crates/churl-core/src/secrets/: tests.rs
crates/churl-core/src/sequence/: tests.rs
crates/churl-core/tests/: curl_roundtrip.rs  http.rs  load.rs  paths.rs  persistence.rs  roundtrip_prop.rs  sequence.rs  tls.rs  tree_ops.rs
crates/churl-core/tests/fixtures/: auth.toml  basic.toml  folder.toml  headers_body.toml  params.toml
crates/churl/src/: headless.rs  init.rs  lib.rs  load_cmd.rs  main.rs  output.rs  resolve.rs  run_cmd.rs  send_cmd.rs  seq_cmd.rs  tui.rs  tutorial.rs  uninstall.rs  update.rs
crates/churl/src/tui/: app.rs  clipboard.rs  events.rs  highlight.rs  log_subscriber.rs  theme.rs
crates/churl/src/tui/app/: mod.rs  pure.rs  render.rs  state.rs  tests.rs
crates/churl/src/tui/app/handlers/: body_browse.rs  body_parts.rs  buffers.rs  crud.rs  debug.rs  editing.rs  env_editor.rs  help.rs  load_runner.rs  mod.rs  options.rs  response.rs  send.rs  sequence.rs  settings.rs  vars.rs  workspace.rs
crates/churl/src/tui/components/: env_editor.rs  explorer.rs  file_picker.rs  fold.rs  help.rs  inspector.rs  jump.rs  line_editor.rs  load_runner.rs  log_panel.rs  message.rs  method_menu.rs  mod.rs  palette.rs  picker.rs  prompt.rs  request.rs  request_tabs.rs  response.rs  search.rs  sequence_editor.rs  sequence_runner.rs  statusline.rs  tab_strip.rs  traffic.rs  urlbar.rs  vim_ext.rs
crates/churl/src/tui/components/env_editor/: edit.rs  mod.rs  render.rs  tests.rs
crates/churl/src/tui/components/explorer/: tests.rs
crates/churl/src/tui/components/load_runner/: tests.rs
crates/churl/src/tui/components/load_runner/snapshots/: churl__tui__components__load_runner__tests__snapshot_config_header_pre_run.snap  churl__tui__components__load_runner__tests__snapshot_finished_with_failures_stats_line.snap  churl__tui__components__load_runner__tests__snapshot_mid_run_live_stats_mixed_glyphs.snap  churl__tui__components__load_runner__tests__snapshot_selected_response_shown.snap
crates/churl/src/tui/components/options/: edit.rs  mod.rs  render.rs  tests.rs
crates/churl/src/tui/components/response/: geometry.rs  mod.rs  render.rs  state.rs  tests.rs  text.rs
crates/churl/src/tui/components/sequence_editor/: tests.rs
crates/churl/src/tui/components/settings/: cookie_form.rs  edit.rs  mod.rs  render.rs  tests.rs
crates/churl/src/tui/components/snapshots/: churl__tui__components__load_runner__tests__snapshot_config_header_pre_run.snap  churl__tui__components__load_runner__tests__snapshot_finished_with_failures_stats_line.snap  churl__tui__components__load_runner__tests__snapshot_mid_run_live_stats_mixed_glyphs.snap  churl__tui__components__load_runner__tests__snapshot_selected_response_shown.snap
crates/churl/src/tui/events/: action.rs  fuzzy.rs  mod.rs  tests.rs
crates/churl/tests/: cli_import.rs  cli_import_collection.rs  cli_init.rs  cli_load.rs  cli_m6.rs  cli_run.rs  cli_run_seq.rs  cli_send.rs  cli_tutorial.rs  tui_snapshot.rs
crates/churl/tests/snapshots/: tui_snapshot__confirm_delete_endpoint_overlay.snap  tui_snapshot__confirm_discard_changes_overlay.snap  tui_snapshot__empty_state_without_workspace.snap  tui_snapshot__env_editor_discard_confirm.snap  tui_snapshot__env_editor_editing_a_value.snap  tui_snapshot__env_editor_masks_secret_named_literal.snap  tui_snapshot__env_editor_opens_with_both_panes.snap  tui_snapshot__env_editor_precedence_shows_shadowing.snap  tui_snapshot__explorer_row_dirty_marker_clears_on_save.snap  tui_snapshot__explorer_scrolls_to_keep_selection_visible.snap  tui_snapshot__help_overlay.snap  tui_snapshot__inspector_overlay_no_trace_placeholder.snap  tui_snapshot__inspector_overlay_redirects_section_shows_stripped_header.snap  tui_snapshot__inspector_overlay_request_section_masks_secret.snap  tui_snapshot__inspector_overlay_traffic_browse_position.snap  tui_snapshot__jump_overlay_shows_labels.snap  tui_snapshot__leader_load_submenu_popup.snap  tui_snapshot__leader_sequences_submenu_popup.snap  tui_snapshot__leader_which_key_popup.snap  tui_snapshot__log_panel_overlay_empty.snap  tui_snapshot__log_panel_overlay_with_events.snap  tui_snapshot__message_row_absent.snap  tui_snapshot__message_row_active.snap  tui_snapshot__method_menu_overlay.snap  tui_snapshot__multipart_file_picker_overlay.snap  tui_snapshot__options_overlay_advanced_section_when_debug_on.snap  tui_snapshot__options_overlay_open.snap  tui_snapshot__options_overlay_toggle_tls.snap  tui_snapshot__palette_lists_curated_commands.snap  tui_snapshot__palette_overlay.snap  tui_snapshot__placeholder_screen_snapshot.snap  tui_snapshot__prompt_new_endpoint_overlay.snap  tui_snapshot__request_pane_auth_line_masks_literal_secret.snap  tui_snapshot__request_pane_auth_line_placeholder_shown_verbatim.snap  tui_snapshot__request_tab_bar_shows_digit_prefixes_when_focused.snap  tui_snapshot__request_tab_body.snap  tui_snapshot__request_tab_body_browse_fold_renders_ellipsis_marker.snap  tui_snapshot__request_tab_body_browse_pretty_and_wrap_toggle.snap  tui_snapshot__request_tab_body_browse_search_active_keeps_focused_chrome.snap  tui_snapshot__request_tab_body_edit_then_browse_shows_typed_content.snap  (+37 more)
(+14 files in other folders)
