[workspace]
members = [
    "crates/churl-core",
    "crates/churl",
]
resolver = "3"

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlsubaieAli/churl"

[workspace.dependencies]
# Error handling
thiserror = "2"
color-eyre = "0.6"

# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
edtui = "0.11"
crokey = "1.4"
nucleo-matcher = "0.3"

# Async
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
futures = "0.3"

# HTTP
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }

# curl import/export
shlex = "1"
base64 = "0.22"

# Syntax highlighting (churl bin only; never churl-core)
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
two-face = "0.4"

# Terminal cell widths (inline-edit viewport)
unicode-width = "0.2"

# Serialization / persistence
serde = { version = "1", features = ["derive"] }
toml_edit = { version = "0.25", features = ["serde"] }
rusqlite = { version = "0.40", features = ["bundled"] }
dirs = "6"

# Testing
insta = { version = "1", features = ["filters"] }
proptest = "1"
tempfile = "3"
wiremock = "0.6"
