[workspace]
members = [
    "crates/churl-core",
    "crates/churl",
]
resolver = "3"

[workspace.package]
version = "0.6.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlsubaieAli/churl"

[workspace.dependencies]
# Error handling
thiserror = "2"
color-eyre = "0.6"

# CLI
clap = { version = "4", features = ["derive"] }
# Shell completions + man-page generation for the `completions`/`man` subcommands
# (churl bin only; never churl-core).
clap_complete = "4"
clap_mangen = "0.3"

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
edtui = "0.11"
crokey = "1.4"
nucleo-matcher = "0.3"

# Async
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
futures = "0.3"

# HTTP
reqwest = { version = "0.13", default-features = false, features = ["rustls", "cookies"] }
# Owned cookie jar we can serialize to JSON (the store behind reqwest's own
# `Jar`); declared explicitly so `ChurlCookieJar` can hold + persist it. Pinned
# to the exact version reqwest's `cookies` feature resolves (see Cargo.lock).
cookie_store = "0.22"

# curl import/export
shlex = "1"
base64 = "0.22"

# Semantic-version comparison (workspace version pinning)
semver = "1"

# Syntax highlighting (churl bin only; never churl-core)
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
two-face = "0.4"

# Terminal cell widths (inline-edit viewport)
unicode-width = "0.2"

# Native OS clipboard (churl bin only; never churl-core). Already a transitive
# dep via edtui, so it adds no new packages. `default-features = false`
# documents churl's text-only intent, but note edtui pulls arboard with its
# defaults too — Cargo feature-unification keeps `image-data` in the build
# regardless, so this flag does not actually slim the compiled surface today.
# X11 backend is pure-Rust (x11rb via rustix) — no libxcb-dev on Linux CI.
# `wayland-data-control` adds arboard's native Wayland clipboard: on a session
# with WAYLAND_DISPLAY set, arboard uses the wl-data-control protocol and only
# falls back to X11 if that fails (arboard gates the wl-clipboard-rs dep to
# non-macOS Unix, so the feature is a no-op on macOS/Windows). Native path =
# macOS / Windows / Linux-Wayland / Linux-X11; OSC 52 stays the fallback for
# displayless terminals where no native clipboard is reachable.
arboard = { version = "3.6", default-features = false, features = [
    "wayland-data-control",
] }

# Self-update (churl bin only): atomic replace-over-running-binary, cross-platform
self-replace = "1"
# SHA-256 for verifying downloaded release assets (churl bin only)
sha2 = "0.10"
# Unpacking the downloaded release archive to reach the binary (churl bin only).
# tar.gz on unix, zip on windows — mirrors what the install scripts extract.
flate2 = "1"
tar = "0.4"
zip = { version = "8", default-features = false, features = ["deflate"] }

# Serialization / persistence
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml_edit = { version = "0.25", features = ["serde"] }
rusqlite = { version = "0.40", features = ["bundled"] }
dirs = "6"

# Testing
insta = { version = "1", features = ["filters"] }
proptest = "1"
tempfile = "3"
wiremock = "0.6"
# Self-signed TLS test harness (churl-core dev only): prove the insecure client
# accepts a self-signed / wrong-host cert while the secure client rejects it.
# rustls/tokio-rustls are already in the tree via reqwest's rustls backend.
rcgen = "0.13"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
