[workspace]
members = [
    "crates/churl-core",
    "crates/churl",
]
resolver = "3"

[workspace.package]
version = "0.10.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlsubaieAli/churl"

[workspace.dependencies]
# Error handling
thiserror = "2"
color-eyre = "0.6"

# CLI
clap = { version = "4", features = ["derive"] }
# Shell completions + man-page generation for the `completions`/`man` subcommands
# (churl bin only; never churl-core).
clap_complete = "4"
clap_mangen = "0.3"

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
edtui = "0.11"
crokey = "1.4"
nucleo-matcher = "0.3"

# Async
# `fs` added for M8.6: multipart file parts are opened/streamed via
# `tokio::fs::File` (async `fstat` + read), never blocking the runtime.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs"] }
futures = "0.3"

# Debug tracing (churl bin only; never churl-core — M8.3 Log panel). The
# subscriber backs a bounded in-memory ring the TUI renders; no file/network
# writers, so no extra I/O surface.
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP
# `multipart` + `stream` added for M8.6: `reqwest::multipart::Form` +
# streaming a `tokio::fs::File` part body (`Part::stream_with_length`).
reqwest = { version = "0.13", default-features = false, features = ["rustls", "cookies", "multipart", "stream"] }
# Owned cookie jar we can serialize to JSON (the store behind reqwest's own
# `Jar`); declared explicitly so `ChurlCookieJar` can hold + persist it. Pinned
# to the exact version reqwest's `cookies` feature resolves (see Cargo.lock).
cookie_store = "0.22"
# The `cookie::Cookie` type behind `cookie_store::RawCookie` — already resolved
# transitively via `cookie_store`; declared explicitly (same 0.18.x it pins)
# so `ChurlCookieJar::upsert` can build one via the builder/setter API and
# reach `cookie::time` for a far-future persistent expiry.
cookie = "0.18"

# curl import/export
shlex = "1"
base64 = "0.22"

# Semantic-version comparison (workspace version pinning)
semver = "1"

# Syntax highlighting (churl bin only; never churl-core)
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
two-face = "0.4"

# Response-body pretty-printing (churl bin only; never churl-core — M8.7).
# quick-xml is already a transitive dep (0.41.0, via syntect -> plist) at this
# exact version, so pinning it here adds no new resolved version to the tree.
quick-xml = "0.41"
# html5ever/markup5ever_rcdom (HTML pretty-print) are NET-NEW deps, gated on a
# `cargo deny check` pass (license + advisories) before any code depends on
# them — see docs/DECISIONS.md.
html5ever = "0.39"
markup5ever_rcdom = "0.39"

# Terminal cell widths (inline-edit viewport)
unicode-width = "0.2"

# Native OS clipboard (churl bin only; never churl-core). Already a transitive
# dep via edtui, so it adds no new packages. `default-features = false`
# documents churl's text-only intent, but note edtui pulls arboard with its
# defaults too — Cargo feature-unification keeps `image-data` in the build
# regardless, so this flag does not actually slim the compiled surface today.
# X11 backend is pure-Rust (x11rb via rustix) — no libxcb-dev on Linux CI.
# `wayland-data-control` adds arboard's native Wayland clipboard: on a session
# with WAYLAND_DISPLAY set, arboard uses the wl-data-control protocol and only
# falls back to X11 if that fails (arboard gates the wl-clipboard-rs dep to
# non-macOS Unix, so the feature is a no-op on macOS/Windows). Native path =
# macOS / Windows / Linux-Wayland / Linux-X11; OSC 52 stays the fallback for
# displayless terminals where no native clipboard is reachable.
arboard = { version = "3.6", default-features = false, features = [
    "wayland-data-control",
] }

# Self-update (churl bin only): atomic replace-over-running-binary, cross-platform
self-replace = "1"
# SHA-256 for verifying downloaded release assets (churl bin only)
sha2 = "0.10"
# Unpacking the downloaded release archive to reach the binary (churl bin only).
# tar.gz on unix, zip on windows — mirrors what the install scripts extract.
flate2 = "1"
tar = "0.4"
zip = { version = "8", default-features = false, features = ["deflate"] }

# Serialization / persistence
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml_edit = { version = "0.25", features = ["serde"] }
rusqlite = { version = "0.40", features = ["bundled"] }
dirs = "6"

# Testing
insta = { version = "1", features = ["filters"] }
proptest = "1"
tempfile = "3"
wiremock = "0.6"
# Self-signed TLS test harness (churl-core dev only): prove the insecure client
# accepts a self-signed / wrong-host cert while the secure client rejects it.
# rustls/tokio-rustls are already in the tree via reqwest's rustls backend.
rcgen = "0.13"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
