[package]
name = "churl-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dirs.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
thiserror.workspace = true
toml_edit.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
tokio.workspace = true
wiremock.workspace = true
