[package]
name = "churl-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for churl: HTTP request model, persistence, execution"
keywords = ["http", "tui", "api-client", "curl", "terminal"]
categories = ["command-line-utilities", "web-programming::http-client"]
readme = "README.md"

[dependencies]
base64.workspace = true
cookie.workspace = true
cookie_store.workspace = true
dirs.workspace = true
futures.workspace = true
reqwest.workspace = true
shlex.workspace = true
rusqlite.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml_edit.workspace = true

[dev-dependencies]
proptest.workspace = true
rcgen.workspace = true
reqwest.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
wiremock.workspace = true
