[package]
name = "churl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "churl"
path = "src/main.rs"

[lib]
name = "churl"
path = "src/lib.rs"

[dependencies]
churl-core = { path = "../churl-core" }
clap.workspace = true
color-eyre.workspace = true
ratatui.workspace = true
crossterm.workspace = true
edtui.workspace = true
crokey.workspace = true
nucleo-matcher.workspace = true
tokio.workspace = true
futures.workspace = true
reqwest.workspace = true
syntect.workspace = true
two-face.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
