[package]
name = "churl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A fast terminal API client — craft, send, and inspect HTTP requests"
keywords = ["http", "tui", "api-client", "curl", "terminal"]
categories = ["command-line-utilities"]
readme = "../../README.md"

[[bin]]
name = "churl"
path = "src/main.rs"

[lib]
name = "churl"
path = "src/lib.rs"

[dependencies]
churl-core = { path = "../churl-core", version = "0.1.3" }
base64.workspace = true
clap.workspace = true
dirs.workspace = true
color-eyre.workspace = true
ratatui.workspace = true
crossterm.workspace = true
edtui.workspace = true
crokey.workspace = true
nucleo-matcher.workspace = true
tokio.workspace = true
futures.workspace = true
reqwest.workspace = true
syntect.workspace = true
two-face.workspace = true
unicode-width.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
