[package]
name = "churl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A fast terminal API client — craft, send, and inspect HTTP requests"
keywords = ["http", "tui", "api-client", "curl", "terminal"]
categories = ["command-line-utilities"]
readme = "../../README.md"

[[bin]]
name = "churl"
path = "src/main.rs"

[lib]
name = "churl"
path = "src/lib.rs"

[dependencies]
churl-core = { path = "../churl-core", version = "0.7.0" }
base64.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
dirs.workspace = true
color-eyre.workspace = true
ratatui.workspace = true
crossterm.workspace = true
edtui.workspace = true
crokey.workspace = true
nucleo-matcher.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json.workspace = true
tempfile.workspace = true
syntect.workspace = true
two-face.workspace = true
unicode-width.workspace = true
arboard.workspace = true
self-replace.workspace = true
sha2.workspace = true
semver.workspace = true
flate2.workspace = true
tar.workspace = true
zip.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
wiremock.workspace = true
